revision 40 - 20100719                                          |
* libspeedtest:                                                 |
  Total code rewrite                                            |
  Added serial download testing per download group              |
  Implemented persistent settings system                        |
  Implemented report file saving system                         |
  Use of non-blocking methods for increased GUI responsiveness  |
  One Google Chart generated per download group                 |
  Google Charts automatically adjust pixel height based on the  |
  number of ping groups and number of hosts in each D/L group   |
  Google Charts automatically adjust X-axis scaling in the D/L  |
  speed results, when the ADSL2+/24 Mbps threshold is exceeded  |
  Google Charts contain up to 5 different colours. Colours will |
  cycle when chart elements > 5                                 |
  Google Charts in GIF format give a filesize reduction to 1/2  |
  approx. of the original filesizes                             |
  Cosmetic changes in the report output. bbCode output adjusted |
  to decrease post height                                       |
  In non-Windows OSes, a static version of libspeedtest is      |
  created and linked inside the other executables, to avoid     |
  problems with LD_LIBRARY_PATH environment variable and such   |

* QSpeedTest: Major interface changes!                          |
  Implemented menu system                                       |
  Moved some push buttons to menuitems                          |
  Added keyboard shortcuts for some menu actions                |
  Save report menuitems with a dialog that asks the report's    |
  destination path and filename. A default filename is provided |
  based on test's timestamp                                     |
  Added Preferences dialog with persistent program settings.    |
  The settings are: Test mode, no. of pings per host, no. of    |